// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Image renders Image correctly 1`] = `
<div
  class=
      ms-Image
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        animation-duration: 0.367s;
        animation-fill-mode: both;
        animation-name: keyframes from{opacity:0;}to{opacity:1;};
        animation-timing-function: cubic-bezier(.1,.25,.75,.9);
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        overflow: hidden;
      }
>
  <img
    class=
        ms-Image-image
        is-loaded
        ms-Image-image--portrait
        is-fadeIn
        {
          display: block;
          opacity: 1;
        }
    src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAAC0lEQVQImWP4DwQACfsD/eNV8pwAAAAASUVORK5CYII="
  />
</div>
`;

exports[`Image renders ImageFit.centerContain correctly 1`] = `
<div
  class=
      ms-Image
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        animation-duration: 0.367s;
        animation-fill-mode: both;
        animation-name: keyframes from{opacity:0;}to{opacity:1;};
        animation-timing-function: cubic-bezier(.1,.25,.75,.9);
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        overflow: hidden;
        position: relative;
      }
  style="width: 50px; height: 100px;"
>
  <img
    class=
        ms-Image-image
        is-loaded
        ms-Image-image--centerContain
        ms-Image-image--landscape
        is-fadeIn
        {
          display: block;
          left: 50% /* @noflip */;
          max-width: 100%;
          opacity: 1;
          position: absolute;
          top: 50%;
          transform: translate(-50%,-50%);
        }
    src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAAC0lEQVQImWP4DwQACfsD/eNV8pwAAAAASUVORK5CYII="
  />
</div>
`;

exports[`Image renders ImageFit.centerCover correctly 1`] = `
<div
  class=
      ms-Image
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        animation-duration: 0.367s;
        animation-fill-mode: both;
        animation-name: keyframes from{opacity:0;}to{opacity:1;};
        animation-timing-function: cubic-bezier(.1,.25,.75,.9);
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        overflow: hidden;
        position: relative;
      }
  style="width: 50px; height: 100px;"
>
  <img
    class=
        ms-Image-image
        is-loaded
        ms-Image-image--centerCover
        ms-Image-image--landscape
        is-fadeIn
        {
          display: block;
          left: 50% /* @noflip */;
          max-height: 100%;
          opacity: 1;
          position: absolute;
          top: 50%;
          transform: translate(-50%,-50%);
        }
    src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAAC0lEQVQImWP4DwQACfsD/eNV8pwAAAAASUVORK5CYII="
  />
</div>
`;
